<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_follower_controller</name>
  <version>1.0.0</version>
  <description>ANSCER compliant ROS 2 Line Follower Controller Package</description>
  <maintainer email="deepak.rajasekaran@anscer.com">Deepak Rajasekaran</maintainer>
  <author email="deepak.rajasekaran@anscer.com">Deepak Rajasekaran</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
