<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_bringup</name>
  <version>1.0.0</version>
  <description>System launch package for AGV.</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>diff_drive_hardware</exec_depend>
  <exec_depend>mgs_hardware_interface</exec_depend>
  <exec_depend>line_follower</exec_depend>
  <exec_depend>roboteq_hardware_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
