<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboteq_driver</name>
  <version>1.0.0</version>
  <description>CAN Driver and ros2_control Hardware Interface for Roboteq Motor Controller</description>
  <maintainer email="lucifer@anscer.com">lucifer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>custom_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
